<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.lau.vdvil</groupId>
    <artifactId>video-renderer-base</artifactId>
    <version>1.1.1</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
        <test.exlusion />
    </properties>
    <modules>
        <module>video-renderer-core</module>
        <module>image-core</module>
        <module>video-renderer</module>
        <module>ffmpeg</module>
    </modules>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.36</version>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>image-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>video-renderer-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>ffmpeg</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <profiles>
        <profile>
            <id>ex-integration</id>
            <properties>
                <test.exlusion>IntegrationTest</test.exlusion>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-scm-plugin</artifactId>
                <version>2.0.1</version>
                <configuration>
                    <tag>${project.artifactId}-${project.version}</tag>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <excludedGroups>${test.exlusion}
                    </excludedGroups><!-- To be switched based on whether running on github/actions or naught -->
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>aws-repository</id>
            <url>https://kompost.s3.amazonaws.com/maven/</url>
        </repository>
    </repositories>
    <scm>
        <connection>scm:git:ssh://github.com/StigLau/VideoRenderer.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/StigLau/VideoRenderer.git</developerConnection>
        <url>https://github.com/StigLau/VideoRenderer</url>
    </scm>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub StigLau Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/StigLau/VideoRenderer</url>
        </repository>
    </distributionManagement>
</project>
